# tmail

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  openssl.cnf  vcpkg.json
certs/: ca-cert.pem  ca-key.pem
client/: CMakeLists.txt  client.c
cmake/modules/: FindWolfSSL.cmake
docs/: notes.md
include/: user_settings.h
relay/: CMakeLists.txt  relay.c  test.c
src/: server.c  test.c
